--- a/sales_project/Project.ipynb
+++ b/sales_project/Project.ipynb
@@ -160,13 +160,12 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 147,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
     "df_source=df_sales.join(df_menu,\"Product_id\").groupBy(\"Source_order\").agg(sum(\"Product_price\").alias(\"Total_sales\"))\\\n",
-    "    .orderBy(sum(\"Product_price\").desc())\n",
-    "# df_source.show()\n"
+    "    .orderBy(sum(\"Product_price\").desc())\n"
    ]
   },
   {
